--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,169 +1,182 @@
-:root {
-  --wite-color: #fff;
-  --camera-bacground-color: #BEA69E;
-  --gradient-color: #1D1D1D;
-  --bacground-color: #121212;
-}
-
+/*---------------------------- Footer ----------------------------*/
 .footer {
-background-image: url(../img/footer-phone.webp);
-background-color: #121212;
-
-}
-
-.adres {
-  color: var(--wite-color);
-  font-family: DM Sans;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 18px;
-  letter-spacing: 0%;
-  text-align: left;
-  padding-top: 10px;
-  padding-right: 62px;
-}
-
-
-.footer-tel {
-color:  var(--wite-color);
-font-family: DM Sans;
-position: static;
-font-size: 14px;
-font-family: DM Sans;
-font-size: 14px;
-font-weight: 400;
-line-height: 18px;
-letter-spacing: 0%;
-text-align: left;
-}
-
-.footer-teladress {
-   margin-left: 100px;
-   margin-top: 24.75px;
-}
-
-.footer-adress {
-font-family: var(--font-family);
-font-weight: 400;
-font-size: 14px;
-line-height: 129%;
-color: var(--wite-color);
-}
-
-.rights-text {
-  font-family: DM Sans;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 18px;
-  letter-spacing: 0%;
-  text-align: left;
-  color: var(--wite-color);
-}
-
-footer {
-  width: 1278px;
-  height: 331px;
-}
-
-
-
-.rights {
-  width: 171px;
-  height: 36px;
-  left: 100px;
-  right: 1007px;
-  top: 270px;
-  bottom: 25px;
-}
-
-.info-box {
-  display: flex;
-  gap: 50px;
-  justify-content: center;
-  outline: red solid;
-  margin-top: 50px;
-  margin-right: 889px;
-  margin-left: 527px;
-}
-
-.Socialnetworks-item {
-  font-family: var(--font-family);
-  font-weight: 400;
-  font-size: 14px;
-  text-transform: uppercase;
-  color: var(--wite-color);
-}
-
-.box {
-  display: flex;
-}
-
-.input-email {
-  outline: red solid;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-left: 18px;
-  padding-right: 78px;
-  font-family: DM Sans;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 20px;
-  letter-spacing: 0px;
-  text-align: left;
-  border-radius: 12px;
-  border: none;
-  width: 216px;
-  height: 30px;
-}
-
-.button-input {
-  padding-top: 18px;
-  padding-bottom: 18px;
-  padding-left: 17px;
-  padding-right: 17px;
-  font-family: DM Sans;
-  font-size: 20px;
-  font-weight: 400;
-  line-height: 120%;
-  letter-spacing: 0px;
-  text-align: center;
-  border-radius: 12px;
-  color: var(--wite-color);
-  border: none;
-  background: var(--gradient-color);
-}
-
-/* .footer-inor {
-  display: flex;
-  gap: 16px;
-  justify-content: center;
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
+  background-image: url(../img/background.webp);
+  background-color: #121212;
+  background-position: center;
+  background-size: contain;
+  background-attachment: fixed;
   padding-top: 50px;
-  margin-bottom: 102px;
-} */
-
-.we-text {
-  font-family: var(--font-family);
-  font-weight: 400;
-  font-size: 14px;
-  text-transform: uppercase;
-  color: var(--wite-color);
 }
 
-.box-sox {
-width: 224px;
-height: 170px;
+.footer-wrap {
+  margin-bottom: 40px;
 }
 
-.logo-footer {
-  margin-left: 100px;
-  margin-top: 50px;
+.footer-frame-section {
+  margin-bottom: 40px;
 }
 
-.footer-Socialnetworks {
-width: 77px;
-height: 94px;
-}
 
-.policy-span {
+
+.footer-logo-svg {
+  fill: white;
+  margin-bottom: 16px;
   display: block;
 }
+
+
+
+.footer-address {
+  font-style: normal;
+}
+
+.footer-phone-contacts {
+  display: block;
+  color: #fff;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+  font-family: DM Sans;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 18px;
+}
+
+
+.footer-country {
+  display: block;
+  color: #fff;
+  font-family: DM Sans;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 18px;
+  letter-spacing: 0%;
+}
+
+.footer-logo {
+  padding-bottom: 20px;
+}
+
+.footer-nav-section {
+  display: flex;
+  gap: 40px;
+  margin-bottom: 75px;
+}
+
+.footer-soc-name {
+  color: #fff;
+  font-family: DM Sans;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 18px;
+}
+
+
+.footer-form-container {
+  margin-bottom: 40px;
+}
+
+.footer-form {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+.footer-input {
+  width: 100%;
+  height: 60px;
+  border-radius: 12px;
+  color: #121212;
+  font-size: 16px;
+  line-height: 1.25;
+  outline: transparent;
+  border: none;
+  padding-left:  15px;
+}
+
+.footer-input::placeholder {
+  color: #121212;
+  font-size: 16px;
+  line-height: 1.25;
+}
+
+.footer-form-button {
+  width: 60px;
+  height: 60px;
+  border: none;
+  background-color: #1d1d1d;
+  color: #fff;
+  border-radius: 12px;
+  font-size: 20px;
+  line-height: 1.2;
+}
+.footer-form-button:hover {
+  color: #bea69e;
+  background-color: #000000;
+}
+.footer-last-part {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer-text {
+  font-size: 12px;
+  line-height: 16px;
+  color: #fff;
+  font-family: DM Sans;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 18px;
+  letter-spacing: 0%;
+}
+
+.footer-menu-list,
+.footer-soc-list {
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+}
+
+
+
+
+  .footer-wrap {
+    display: flex;
+    margin-bottom: 75px;
+    justify-content: space-between;
+  }
+  .footer-logo-svg {
+    margin-bottom: 25px;
+  }
+  .footer-input {
+    width: 178px;
+  }
+  
+
+
+
+
+  .footer-wrap {
+    display: flex;
+    margin-bottom: 50px;
+    justify-content: flex-start;
+  }
+
+  .footer-input {
+    width: 216px;
+  }
+  
+
+  .footer-frame-section {
+    margin-right: auto;
+  }
+  
+
+
+
+  .footer-form-container {
+    margin-left: 190px;
+  }
+  .footer-nav-section {
+    gap: 100px;
+    margin-bottom: 0;
+  }
