--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,7 +4,7 @@
       <div class="footer-frame-section">
         
         <div class="footer-contacts">
-          <img src="../img/logo.webp" class="footer-logo" alt="logo">
+          <img src="./img/logo.webp" class="footer-logo" alt="logo">
           <address class="footer-address">
             <a href="tel:+380665438912" class="footer-phone-contacts">
               UK: +38 066 543 8912
