--- a/src/partials/our_courses.html
+++ b/src/partials/our_courses.html
@@ -9,7 +9,7 @@
             <li class="courses-item">
                 <div class="courses-box">
                     <h3 class="courses-number">01</h3>
-                  <img src="../img/arrow2.png" class="courses-img" alt="arrow2">                
+                  <img src="./img/arrow2.png" class="courses-img" alt="arrow2">                
                 </div>
                 <h2 class="courses-info">Basics of photography</h2>
                 <p class="courses-descriptions">During this course, you will be able to familiarize yourself with different types of cameras, learn the basics of composition.</p>
@@ -17,7 +17,7 @@
             <li class="courses-item">
                 <div class="courses-box">
                     <h3 class="courses-number">02</h3>
-                  <img src="../img/arrow2.png" class="courses-img" alt="arrow">
+                  <img src="./img/arrow2.png" class="courses-img" alt="arrow">
                 </div>
                 <h2 class="courses-info">Landscape photography</h2>
                 <p class="courses-descriptions">In this course, you'll learn how to choose the right angles, frame landscapes, and create depth and perspective in your images.</p>
@@ -25,7 +25,7 @@
             <li class="courses-item">
                 <div class="courses-box">
                     <h3 class="courses-number">03</h3>
-                  <img src="../img/arrow2.png" class="courses-img" alt="arrow2">
+                  <img src="./img/arrow2.png" class="courses-img" alt="arrow2">
                 </div>
                 <h2 class="courses-info">Portrait photography</h2>
                 <p class="courses-descriptions">During this course, you will learn to choose the right lighting, reproduce the mood and expressions on the faces of the models.</p>
