--- a/src/partials/block.html
+++ b/src/partials/block.html
@@ -1,6 +1,8 @@
 
     <section class="block-section">
-        <div class="block-line"></div>
+        <div class="block-lineup"></div>
+        <div class="block-container">
         <h1 class="block-text">MASTER <span class="block-span">YOUR PHOTOGRAPHY</span> SKILLS WITH US!</h1>
-        <div class="block-line"></div>
+        </div>
+        <div class="block-linebottom"></div>
     </section>
