--- a/src/partials/sign_up.html
+++ b/src/partials/sign_up.html
@@ -9,13 +9,13 @@
         message and we'll get back to you shortly.
       </p>
       <div class="sign-up-namecontainer">
-      <label  for="name" class="sign-up-namelabel"><input type="text" placeholder="Enter your name" class="namelabel"/></label>
+      <label   class="sign-up-namelabel"><input type="text" placeholder="Enter your name" class="namelabel"/></label>
     </div>
     <div class="sign-up-emailcontainer">
-      <label for="email" class="sign-up-emaillabel"><input type="text" placeholder="Enter your email" class="emaillabel"/></label>
+      <label  class="sign-up-emaillabel"><input type="text" placeholder="Enter your email" class="emaillabel"/></label>
     </div>
     <div class="sign-up-messagecontainer">
-      <label for="message" class="sign-up-messagelabel"><input type="text" placeholder="Message" class="messagelabel"/></label>
+      <label  class="sign-up-messagelabel"><input type="text" placeholder="Message" class="messagelabel"/></label>
     </div>
       <button class="sign-up-button">SEND</button>
       <h5 class="sign-up-bottomtext">
