--- a/src/partials/sign_up.html
+++ b/src/partials/sign_up.html
@@ -1,5 +1,5 @@
 
-    <section class="sign-up-section">
+    <section class="sign-up-section" lang="en">
       <div class="container">
         <div class="sign-up-container">
         <div class="sing-up-textcontainer">
