--- a/src/partials/about_us.html
+++ b/src/partials/about_us.html
@@ -1,7 +1,7 @@
 <section>
     <h2 class="about-logo"> About <span class="about-subtext"> Us </span> </h2>
   <div class="about-text">
-    <img src="../img/Rectangle 6.webp" class="image-kamera" alt="rectangle"/>
+    <img src="./img/Rectangle 6.webp" class="image-kamera" alt="rectangle"/>
     <div>
     <p class="section-text">
       Our photography school is designed to teach you everything you need to
