--- a/src/css/about-us.css
+++ b/src/css/about-us.css
@@ -1,38 +1,41 @@
 :root {
-    --wite-color: #fff;
-    --camera-bacground-color: #BEA69E;
-    --gradient-color:  #1D1D1D;
-    --bacground-color: #121212;
-  }
-  
-  .about {
-    background-color: var(--bacground-color);
-  }
+  --wite-color: #fff;
+  --camera-bacground-color: #BEA69E;
+  --gradient-color: #1D1D1D;
+  --bacground-color: #121212;
+}
 
- .about-logo{
-font-family: "DM Sans" , sans-serif;
+.about {
+  background-color: var(--bacground-color);
+}
+
+.about-logo {
+  font-family: "DM Sans", sans-serif;
   font-weight: 500;
   font-size: 48px;
-  /* line-height: 112%; */
+  line-height: 112%;
   letter-spacing: -0.04em;
   color: var(--wite-color);
- } 
- .about-subtext {
+}
+
+.about-subtext {
   color: var(--camera-bacground-color);
- }
+}
+
 .about-text {
   display: flex;
-  /* align-items: center; */
+  align-items: center;
   flex-wrap: nowrap;
   width: 1080px;
-height: 260px;
+  height: 260px;
+  font-size: 14px;
 }
 
 .image-kamera {
   height: 260px;
 }
 
-.section-text{
+.section-text {
   color: var(--wite-color);
   height: 260px;
   width: 266px;
