--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,29 +1,29 @@
-<section>\
+<section class="reviews-section">
   <div class="container">
-  <h2 class="reviews-logo">Reviews</h2>
-  <ul>
-    <li>
-      <img src="../img/reviewers1.webp" class="reviwes-images" alt="user1" />
-      <h3>Abraham Baker</h3>
-      <p>Student</p>
-      <p>
-        I am very pleased that I decided to enroll in photography school. The
-        teachers turned out to be very talented and experienced professionals
-        who share their knowledge and are dedicated to their work. I was able to
-        expand my skills and discover my own style.
-      </p>
-    </li>
-    <li>
-      <img src="../img/reviewers2.webp" class="reviwes-images" alt="user2" />
-      <h3>Amanda Lowery</h3>
-      <p>Student</p>
-      <p>
-        The courses at the photography school exceeded all my expectations. I
-        gained not only technical knowledge, but also inspiration and motivation
-        to reach new heights in my creativity. Hands-on classes and workshops
-        helped me understand different styles of photography.
-      </p>
-    </li>
-  </ul>
-</div>
+    <h2 class="reviews-logo">Reviews</h2>
+    <ul class="reviews-list">
+      <li class="reviews-itome">
+        <img src="./img/reviwers1.webp" class="reviwes-images" alt="user1" />
+        <h3 class="reviews-title">Abraham Baker</h3>
+        <p class="reviews-text">Student</p>
+        <p>
+          I am very pleased that I decided to enroll in photography school. The
+          teachers turned out to be very talented and experienced professionals
+          who share their knowledge and are dedicated to their work. I was able
+          to expand my skills and discover my own style.
+        </p>
+      </li>
+      <li class="reviews-itome">
+        <img src="./img/reviwers2.webp" class="reviwes-images" alt="user2" />
+        <h3 class="reviews-title">Amanda Lowery</h3>
+        <p class="reviews-text">Student</p>
+        <p>
+          The courses at the photography school exceeded all my expectations. I
+          gained not only technical knowledge, but also inspiration and
+          motivation to reach new heights in my creativity. Hands-on classes and
+          workshops helped me understand different styles of photography.
+        </p>
+      </li>
+    </ul>
+  </div>
 </section>
