--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -9,6 +9,11 @@
   padding-top: 50px;
 }
 
+.footer{
+  padding-top: 150px;
+  padding-bottom: 25px;
+}
+
 .footer-wrap {
   margin-bottom: 40px;
 }
