--- a/src/css/our_mentors.css
+++ b/src/css/our_mentors.css
@@ -6,6 +6,7 @@
   }
 
   .our-mentors{
+    padding-top: 150px;
     background-color: var(--bacground-color);
     font-family: "DM Sans", sans-serif;
   }
