--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,12 +1,12 @@
 <section class="reviews-section">
-  <div class="container">
+  <div class="reviews-container">
     <h2 class="reviews-logo">Reviews</h2>
     <ul class="reviews-list">
       <li class="reviews-itome">
-        <img src="./img/reviwers1.webp" class="reviwes-images" alt="user1" />
+        <img src="./img/reviewers1.webp" class="reviwes-images" alt="user1" />
         <h3 class="reviews-title">Abraham Baker</h3>
-        <p class="reviews-text">Student</p>
-        <p>
+        <p class="reviews-student">Student</p>
+        <p class="reviews-text">
           I am very pleased that I decided to enroll in photography school. The
           teachers turned out to be very talented and experienced professionals
           who share their knowledge and are dedicated to their work. I was able
@@ -14,10 +14,10 @@
         </p>
       </li>
       <li class="reviews-itome">
-        <img src="./img/reviwers2.webp" class="reviwes-images" alt="user2" />
+        <img src="./img/reviewers2.webp" class="reviwes-images" alt="user2" />
         <h3 class="reviews-title">Amanda Lowery</h3>
-        <p class="reviews-text">Student</p>
-        <p>
+        <p class="reviews-student">Student</p>
+        <p class="reviews-text">
           The courses at the photography school exceeded all my expectations. I
           gained not only technical knowledge, but also inspiration and
           motivation to reach new heights in my creativity. Hands-on classes and
