--- a/src/partials/about_us.html
+++ b/src/partials/about_us.html
@@ -3,6 +3,7 @@
     <h2 class="about-logo">About <span class="about-subtext"> Us </span></h2>
     <div class="about-text">
       <img src="./img/camera.webp" class="image-kamera" alt="rectangle" />
+      <div class="about-container">
       <p class="section-text">
         Our photography school is designed to teach you everything you need to
         know about this magical art. Regardless of your experience or skill
@@ -12,13 +13,14 @@
         share their knowledge, but also to inspire you to develop and express
         your unique creativity.
       </p>
-      <p class="section-text">
+      <p class="container-text">
         Our courses cover a wide range of topics, from the basics of photography
         and equipment use to professional image processing and creating
         impressive compositions. You will have the opportunity to learn the
         technical aspects of photography, discover your own style and develop
         your own visual language.
       </p>
+      </div>
     </div>
   </div>
 </section>
