--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,29 +1,37 @@
 <section class="reviews-section">
-  <div class="reviews-container">
-    <h2 class="reviews-logo">Reviews</h2>
-    <ul class="reviews-list">
-      <li class="reviews-itome">
-        <img src="./img/reviewers1.webp" class="reviwes-images" alt="user1" />
-        <h3 class="reviews-title">Abraham Baker</h3>
-        <p class="reviews-student">Student</p>
-        <p class="reviews-text">
-          I am very pleased that I decided to enroll in photography school. The
-          teachers turned out to be very talented and experienced professionals
-          who share their knowledge and are dedicated to their work. I was able
-          to expand my skills and discover my own style.
-        </p>
-      </li>
-      <li class="reviews-itome">
-        <img src="./img/reviewers2.webp" class="reviwes-images" alt="user2" />
-        <h3 class="reviews-title">Amanda Lowery</h3>
-        <p class="reviews-student">Student</p>
-        <p class="reviews-text">
-          The courses at the photography school exceeded all my expectations. I
-          gained not only technical knowledge, but also inspiration and
-          motivation to reach new heights in my creativity. Hands-on classes and
-          workshops helped me understand different styles of photography.
-        </p>
-      </li>
-    </ul>
+  <div class="container">
+    <div class="reviews-container">
+      <h2 class="reviews-logo">Reviews</h2>
+      <ul class="reviews-list">
+        <li class="reviews-itome">
+          <div class="section-images">
+            <img src="../img/user1.webp" class="reviwes-images" alt="user1" />
+            <h3 class="reviews-title">Abraham Baker</h3>
+            <p class="reviews-student">Student</p>
+            <img src="../img/stars2.webp" class="reviwes-image" alt="star2" />
+          </div>
+          <p class="reviews-text">
+            I am very pleased that I decided to enroll in photography school.
+            The teachers turned out to be very talented and experienced
+            professionals who share their knowledge and are dedicated to their
+            work. I was able to expand my skills and discover my own style.
+          </p>
+        </li>
+        <li class="reviews-itome">
+          <div class="section-images">
+            <img src="../img/user2.webp" class="reviwes-images" alt="user2" />
+            <h3 class="reviews-title">Amanda Lowery</h3>
+            <p class="reviews-student">Student</p>
+            <img src="../img/stars1.webp" class="reviwes-image" alt="star" />
+          </div>
+          <p class="reviews-text">
+            The courses at the photography school exceeded all my expectations.
+            I gained not only technical knowledge, but also inspiration and
+            motivation to reach new heights in my creativity. Hands-on classes
+            and workshops helped me understand different styles of photography.
+          </p>
+        </li>
+      </ul>
+    </div>
   </div>
 </section>
