--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -4,12 +4,13 @@
       <h2 class="reviews-logo">Reviews</h2>
       <ul class="reviews-list">
         <li class="reviews-itome">
-          <div class="section-images">
-            <img src="../img/user1.webp" class="reviwes-images" alt="user1" />
+          <!-- <div class="section-images"> -->
+            <img src="./img/user1.webp" class="reviwes-images" alt="user1" />
             <h3 class="reviews-title">Abraham Baker</h3>
             <p class="reviews-student">Student</p>
-            <img src="../img/stars2.webp" class="reviwes-image" alt="star2" />
-          </div>
+           
+          <!-- </div> -->
+           <img src="./img/stars2.webp" class="reviwes-image" alt="star2" />
           <p class="reviews-text">
             I am very pleased that I decided to enroll in photography school.
             The teachers turned out to be very talented and experienced
@@ -19,10 +20,10 @@
         </li>
         <li class="reviews-itome">
           <div class="section-images">
-            <img src="../img/user2.webp" class="reviwes-images" alt="user2" />
+            <img src="./img/user2.webp" class="reviwes-images" alt="user2" />
             <h3 class="reviews-title">Amanda Lowery</h3>
             <p class="reviews-student">Student</p>
-            <img src="../img/stars1.webp" class="reviwes-image" alt="star" />
+            <img src="./img/stars1.webp" class="reviwes-image" alt="star" />
           </div>
           <p class="reviews-text">
             The courses at the photography school exceeded all my expectations.
