--- a/src/css/reviews.css.css
+++ b/src/css/reviews.css.css
@@ -12,8 +12,7 @@
 }
 
 .reviews-title {
-
-  margin-bottom: 4px;
+  font-size: 20px;
   color: var(--wite-color);
 
 }
@@ -45,26 +44,29 @@
 
 .reviews-student {
   color: rgba(255, 255, 255, 0.5);
+  font-size: 14px;
 }
 
 
 .reviews-section {
   background-color: var(--bacground-color);
+  padding-bottom: 150px;
 }
 
 .reviews-image {
   border-radius: 50%;
-
+padding-left: 474px;
+margin-bottom: 56px;
 }
 
 
 .section-images {
-  display: flex;
   align-items: center;
-
 }
 
 .reviews-images {
-    width: 56px;
-      height: 56px;
+  width: 56px;
+  height: 56px;
+  margin-left: 236px;
 }
+
