--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -4,13 +4,20 @@
       <h2 class="reviews-logo">Reviews</h2>
       <ul class="reviews-list">
         <li class="reviews-itome">
-          <!-- <div class="section-images"> -->
+          <div class="section-images">
+            <div class="reviews-gap">
+              <div class="reviewes-img">
             <img src="./img/user1.webp" class="reviwes-images" alt="user1" />
+            </div>
+            <div class="section-names">
             <h3 class="reviews-title">Abraham Baker</h3>
             <p class="reviews-student">Student</p>
+            </div>
+            </div>
+            <img src="./img/stars1.webp" class="reviwes-image" alt="star" />
            
-          <!-- </div> -->
-           <img src="./img/stars2.webp" class="reviwes-image" alt="star2" />
+          </div>
+           
           <p class="reviews-text">
             I am very pleased that I decided to enroll in photography school.
             The teachers turned out to be very talented and experienced
@@ -20,10 +27,17 @@
         </li>
         <li class="reviews-itome">
           <div class="section-images">
-            <img src="./img/user2.webp" class="reviwes-images" alt="user2" />
+            <div class="reviews-gap">
+             <div class="reviewes-img-2">
+            <img src="../img/user2.webp" class="reviwes-images" alt="user2" />
+            </div>
+            <div class="reviews-names-2">
             <h3 class="reviews-title">Amanda Lowery</h3>
             <p class="reviews-student">Student</p>
-            <img src="./img/stars1.webp" class="reviwes-image" alt="star" />
+            </div>
+            </div>
+             <img src="./img/stars2.webp" class="reviwes-image" alt="star2" />
+           
           </div>
           <p class="reviews-text">
             The courses at the photography school exceeded all my expectations.
