--- a/src/css/reviews.css.css
+++ b/src/css/reviews.css.css
@@ -20,11 +20,9 @@
 .reviews-itome {
   border-radius: 12px;
   border: 1px solid rgba(255, 255, 255, 0.2);
-  width: 100%;
   background-color: var(--bacground-color);
   width: 530px;
   height: 216px;
-  padding-bottom: 40px;
   padding-top: 20px;
   padding-left: 20px;
   padding-right: 20px;
@@ -35,6 +33,7 @@
   line-height: 1.30;
   width: 490px;
   height: 80px;
+  padding-top: 20px;
 }
 
 .reviews-list {
@@ -51,22 +50,61 @@
 .reviews-section {
   background-color: var(--bacground-color);
   padding-bottom: 150px;
+  font-family: "DM Sans", sans-serif;
 }
 
 .reviews-image {
   border-radius: 50%;
-padding-left: 474px;
-margin-bottom: 56px;
+  padding-left: 474px;
+  margin-bottom: 56px;
+  margin-left: 156px;
+
 }
 
 
 .section-images {
-  align-items: center;
-}
+  align-items: first baseline;
+  display: flex;
+  gap: 156px;
+  align-items: flex-start;
+ }
 
 .reviews-images {
-  width: 56px;
-  height: 56px;
-  margin-left: 236px;
+  width: 100%;
+  /* height: 100%; */
+  display: block;
+  height: auto;
+  max-width: 100%;
+  padding-top: 20px;
 }
 
+.section-names {
+  display: flex;
+  width: 145px;
+  height: 50px;
+  flex-direction: column;
+  gap: 4px;
+  padding-top: 3px;
+}
+
+.reviews-gap {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+
+}
+
+
+.reviewes-img {
+  width: 56px;
+  height: 56px;
+}
+
+.reviews-names-2 {
+  width: 152px;
+  height: 50px;
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  padding-top: 3px;
+}
