--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,9 @@
     <header class="header">
         <div class="container header-containre">
         <div class="header-div">
-        <img src="./img/logo.webp" alt="Focus.Frame" class="header-logo">
+        <svg class="header-logo">
+            <use href="../img/symbol-defs.svg#icon-logo"></use>
+        </svg>
         <ul class="header-list">
             <li class="header-sections">ABOUT US</li>
             <li class="header-sections">OUR COURSES</li>
