--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,7 +2,7 @@
         <div class="container header-containre">
         <div class="header-div">
         <svg class="header-logo">
-            <use href="../img/symbol-defs.svg#icon-logo"></use>
+            <use href="./img/symbol-defs.svg#icon-logo"></use>
         </svg>
         <ul class="header-list">
             <li class="header-sections">ABOUT US</li>
