--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -29,7 +29,7 @@
           <div class="section-images">
             <div class="reviews-gap">
              <div class="reviewes-img-2">
-            <img src="../img/user2.webp" class="reviwes-images" alt="user2" />
+            <img src="./img/user2.webp" class="reviwes-images" alt="user2" />
             </div>
             <div class="reviews-names-2">
             <h3 class="reviews-title">Amanda Lowery</h3>
