--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -13,17 +13,21 @@
     <div class="hero-students-containre">
       <div class="hero-students-look">
         <img src="./img/students.webp" alt="students" class="hero-students" />
+        
         <div class="hero-happy-students">
           <p class="hero-see-students">Our happy students</p>
-          <p class="hero-arrow">→</p>
+         <svg class="hero-arrow"><use href="./img/symbol-defs.svg#icon-arrow-main"></use></svg>
         </div>
       </div>
       <div class="hero-students-reviews">
-        <img
+        <!-- <img
           src="./img/star.webp"
           alt="cyrcle with star inside"
           class="hero-star"
-        />
+        /> -->
+        <div class="hero-star-container">
+        <svg class="hero-star"><use href="./img/symbol-defs.svg#icon-star-main"></use></svg>
+      </div>
         <div class="hero-reviews-mini">
           <p class="hero-reviews">Reviews</p>
           <p class="hero-number">+1500</p>
