--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -94,3 +94,41 @@ height: 56px;
 height: 56px;
 flex-direction: column;
 }
+
+.hero-star {
+  width: 20px;
+  height: 20px;
+  fill: transparent;
+  stroke: var(--bacground-color);
+  
+}
+
+
+
+.hero-star-container{
+  width: 50px;
+  height: 50px;
+  border-radius: 100px;
+background: var(--camera-bacground-color);
+flex-shrink: 0;
+display: flex;
+align-items: center;
+justify-content: center;
+margin-right: 12px;
+}
+
+
+.hero-star-container:hover .hero-star {
+  fill: var(--bacground-color);
+}
+
+.hero-arrow {
+  margin-top: 8px;
+  fill: var(--wite-color);
+  width: 18px;
+height: 8.66px;
+}
+
+
+
+
