--- a/src/partials/our_courses.html
+++ b/src/partials/our_courses.html
@@ -1,35 +1,61 @@
-
-    <section class="courses">
-        <div class="container">
-        <div class="box">
-        <h2 class="courses-title">Our <span class="courses-text">Courses</span></h2>
-        <p class="courses-description">At our photography school, we offer a variety of courses that cover all aspects of this fascinating art. Regardless of your experience or skill level, we have courses to suit your needs and goals.</p>
+<section class="courses">
+  <div class="container">
+    <div class="box">
+      <h2 class="courses-title">
+        Our <span class="courses-text">Courses</span>
+      </h2>
+      <p class="courses-description">
+        At our photography school, we offer a variety of courses that cover all
+        aspects of this fascinating art. Regardless of your experience or skill
+        level, we have courses to suit your needs and goals.
+      </p>
     </div>
-        <ul class="courses-list">
-            <li class="courses-item">
-                <div class="courses-box">
-                    <h3 class="courses-number">01</h3>
-                  <img src="./img/arrow2.png" class="courses-img" alt="arrow2">                
-                </div>
-                <h2 class="courses-info">Basics of photography</h2>
-                <p class="courses-descriptions">During this course, you will be able to familiarize yourself with different types of cameras, learn the basics of composition.</p>
-            </li>
-            <li class="courses-item">
-                <div class="courses-box">
-                    <h3 class="courses-number">02</h3>
-                  <img src="./img/arrow2.png" class="courses-img" alt="arrow">
-                </div>
-                <h2 class="courses-info">Landscape photography</h2>
-                <p class="courses-descriptions">In this course, you'll learn how to choose the right angles, frame landscapes, and create depth and perspective in your images.</p>
-            </li>
-            <li class="courses-item">
-                <div class="courses-box">
-                    <h3 class="courses-number">03</h3>
-                  <img src="./img/arrow2.png" class="courses-img" alt="arrow2">
-                </div>
-                <h2 class="courses-info">Portrait photography</h2>
-                <p class="courses-descriptions">During this course, you will learn to choose the right lighting, reproduce the mood and expressions on the faces of the models.</p>
-            </li>
-        </ul>
-    </div>
-    </section>
+    <ul class="courses-list">
+      <li class="courses-item">
+        <div class="courses-box">
+          <h3 class="courses-number">01</h3>
+          <a href="" class="courses-link">
+            <svg class="courses-img">
+              <use href="./img/symbol-defs.svg#icon-stroke-courses"></use>
+            </svg>
+          </a>
+        </div>
+        <h2 class="courses-info">Basics of photography</h2>
+        <p class="courses-descriptions">
+          During this course, you will be able to familiarize yourself with
+          different types of cameras, learn the basics of composition.
+        </p>
+      </li>
+      <li class="courses-item">
+        <div class="courses-box">
+          <h3 class="courses-number">02</h3>
+           <a href="" class="courses-link">
+            <svg class="courses-img">
+              <use href="./img/symbol-defs.svg#icon-stroke-courses"></use>
+            </svg>
+          </a>
+        </div>
+        <h2 class="courses-info">Landscape photography</h2>
+        <p class="courses-descriptions">
+          In this course, you'll learn how to choose the right angles, frame
+          landscapes, and create depth and perspective in your images.
+        </p>
+      </li>
+      <li class="courses-item">
+        <div class="courses-box">
+          <h3 class="courses-number">03</h3>
+           <a href="" class="courses-link">
+            <svg class="courses-img">
+              <use href="./img/symbol-defs.svg#icon-stroke-courses"></use>
+            </svg>
+          </a>
+        </div>
+        <h2 class="courses-info">Portrait photography</h2>
+        <p class="courses-descriptions">
+          During this course, you will learn to choose the right lighting,
+          reproduce the mood and expressions on the faces of the models.
+        </p>
+      </li>
+    </ul>
+  </div>
+</section>
