--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -7,17 +7,42 @@
           <div class="section-images">
             <div class="reviews-gap">
               <div class="reviewes-img">
-            <img src="./img/user1.webp" class="reviwes-images" alt="user1" />
+                <img src="./img/user1.webp" class="reviwes-images" alt="user1" />
+              </div>
+              <div class="section-names">
+                <h3 class="reviews-title">Abraham Baker</h3>
+                <p class="reviews-student">Student</p>
+              </div>
             </div>
-            <div class="section-names">
-            <h3 class="reviews-title">Abraham Baker</h3>
-            <p class="reviews-student">Student</p>
-            </div>
-            </div>
-            <img src="./img/stars1.webp" class="reviwes-image" alt="star" />
-           
+            <ul class="review-list">
+              <li class="review-item">
+                <svg class="review-star">
+                  <use href="./img/symbol-defs.svg#icon-star-rewievs"></use>
+                </svg>
+              </li>
+              <li class="review-item">
+                <svg class="review-star">
+                  <use href="./img/symbol-defs.svg#icon-star-rewievs"></use>
+                </svg>
+              </li>
+              <li class="review-item">
+                <svg class="review-star">
+                  <use href="./img/symbol-defs.svg#icon-star-rewievs"></use>
+                </svg>
+              </li>
+              <li class="review-item">
+                <svg class="review-star">
+                  <use href="./img/symbol-defs.svg#icon-star-rewievs"></use>
+                </svg>
+              </li>
+              <li class="review-item">
+                <svg class="review-star-special">
+                  <use href="./img/symbol-defs.svg#icon-star-rewievs"></use>
+                </svg>
+              </li>
+            </ul>
           </div>
-           
+
           <p class="reviews-text">
             I am very pleased that I decided to enroll in photography school.
             The teachers turned out to be very talented and experienced
@@ -28,16 +53,41 @@
         <li class="reviews-itome">
           <div class="section-images">
             <div class="reviews-gap">
-             <div class="reviewes-img-2">
-            <img src="./img/user2.webp" class="reviwes-images" alt="user2" />
+              <div class="reviewes-img-2">
+                <img src="./img/user2.webp" class="reviwes-images" alt="user2" />
+              </div>
+              <div class="reviews-names">
+                <h3 class="reviews-title">Amanda Lowery</h3>
+                <p class="reviews-student">Student</p>
+              </div>
             </div>
-            <div class="reviews-names-2">
-            <h3 class="reviews-title">Amanda Lowery</h3>
-            <p class="reviews-student">Student</p>
-            </div>
-            </div>
-             <img src="./img/stars2.webp" class="reviwes-image" alt="star2" />
-           
+            <ul class="review-list">
+              <li class="review-item">
+                <svg class="review-star">
+                  <use href="./img/symbol-defs.svg#icon-star-rewievs"></use>
+                </svg>
+              </li>
+              <li class="review-item">
+                <svg class="review-star">
+                  <use href="./img/symbol-defs.svg#icon-star-rewievs"></use>
+                </svg>
+              </li>
+              <li class="review-item">
+                <svg class="review-star">
+                  <use href="./img/symbol-defs.svg#icon-star-rewievs"></use>
+                </svg>
+              </li>
+              <li class="review-item">
+                <svg class="review-star">
+                  <use href="./img/symbol-defs.svg#icon-star-rewievs"></use>
+                </svg>
+              </li>
+              <li class="review-item">
+                <svg class="review-star-special">
+                  <use href="./img/symbol-defs.svg#icon-star-rewievs"></use>
+                </svg>
+              </li>
+            </ul>
           </div>
           <p class="reviews-text">
             The courses at the photography school exceeded all my expectations.
