--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,30 +1,30 @@
 :root {
-    --wite-color: #fff;
-    --camera-bacground-color: #BEA69E;
-    --gradient-color: #1D1D1D;
-    --bacground-color: #121212;
-  }
-
-  .header{
-    font-family:"DM Sans", sans-serif ;
-    padding-top: 20px;
-    padding-bottom: 80px;
-  }
-
-  .header-div{
-    background-color: var(--bacground-color);
-    display: flex;
-border: 1px solid rgba(255, 255, 255, 0.2);
-border-radius: 12px;
-width: 822px;
-height: 60px;
+  --wite-color: #fff;
+  --camera-bacground-color: #BEA69E;
+  --gradient-color: #1D1D1D;
+  --bacground-color: #121212;
 }
 
-.header-containre{
+.header {
+  font-family: "DM Sans", sans-serif;
+  padding-top: 20px;
+  padding-bottom: 80px;
+}
+
+.header-div {
+  background-color: var(--bacground-color);
+  display: flex;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  border-radius: 12px;
+  width: 822px;
+  height: 60px;
+}
+
+.header-containre {
   display: flex;
 }
 
-.header-logo{
+.header-logo {
   height: 16px;
   width: 123px;
   margin-left: 50px;
@@ -37,29 +37,29 @@ height: 60px;
   fill: var(--camera-bacground-color);
 }
 
-.header-list{
+.header-list {
   display: flex;
   gap: 28px;
   margin-left: 97px;
   padding-top: 21px;
   padding-bottom: 21px;
   margin-right: 50px;
-height: 18px;
-width: 502px;
+  height: 18px;
+  width: 502px;
 }
 
-.header-sections{
+.header-sections {
   color: var(--wite-color);
   font-weight: 400;
-font-size: 14px;
-text-transform: uppercase;
+  font-size: 14px;
+  text-transform: uppercase;
 }
 
-.header-sections:hover{
+.header-sections:hover {
   color: var(--camera-bacground-color);
 }
 
-.header-button{
+.header-button {
   background-color: var(--wite-color);
   color: var(--bacground-color);
   border: none;
@@ -67,10 +67,44 @@ text-transform: uppercase;
   width: 238px;
   height: 60px;
   padding: 16px 84px;
-margin-left: 20px;
+  margin-left: 20px;
+  /*animation-name: btn;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  animation-delay: 10s;*/
+  animation: btn 6s linear 3s infinite both;
 }
 
-.header-button:hover{
+@keyframes btn {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  5% {
+   transform: rotate(11deg);
+   box-shadow: 2px 4px 50px 10px #8b8b91;
+  }
+
+  10% {
+    transform: rotate(0deg);
+    box-shadow: 2px 4px 50px 10px #ffffff;
+  }
+
+  15% {
+   transform: rotate(-11deg);
+   box-shadow: 2px 4px 50px 10px #8b8b91;
+  }
+
+  20% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+   transform: rotate(0deg);
+  }
+}
+
+.header-button:hover {
   background-color: var(--gradient-color);
   color: var(--camera-bacground-color);
 
